# imperium-crawl

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  LICENSE  PUBLISH-v2.5.0.md  README.md  SKILL.md  VISION.md  imperium-crawl-2.4.0.tgz  package-lock.json  package.json  tsconfig.json  vitest.config.ts
SKILL/: SKILL.md  api-recon.md  build-skill.md  pipelines.md  recipes.md  research.md  site-intel.md  smart-scrape.md  tool-reference.md
SKILL/build-skill/: SKILL.md
SKILL/research/: SKILL.md
autoresearch/: .gitignore  AUTORESEARCH_STATUS.md  eval.ts  program.md  run-loop.sh  run-loop.ts  scoring.ts  types.ts
autoresearch/benchmarks/: easy.json  hard.json  index.ts  medium.json  nightmare.json  workflows.json
autoresearch/fixtures/: index.ts
chrome-extension/: README.md  background.js  content.js  manifest.json  sidepanel.html  sidepanel.js
chrome-extension/lib/: action-types.js
imperium-core-bench/: targets.local.toml
media/: carousel-claude-code-minimax.pptx  carousel-lite-llm-minimax.py
rust/: .gitignore  BLOCKERS.md  Cargo.toml  MORNING-REPORT.md  PROGRESS.md  README.md
rust/crates/imperium-crawl-browser/: Cargo.toml
rust/crates/imperium-crawl-browser/assets/: anti-detect.js
rust/crates/imperium-crawl-browser/src/: actions.rs  browser.rs  camofox.rs  lib.rs  pool.rs  profile.rs
rust/crates/imperium-crawl-browser/tests/: actions.rs  integration.rs  stress.rs
rust/crates/imperium-crawl-cli/: Cargo.toml
rust/crates/imperium-crawl-cli/src/: main.rs
rust/crates/imperium-crawl-core/: Cargo.toml
rust/crates/imperium-crawl-core/src/: config.rs  constants.rs  error.rs  lib.rs  tool.rs  types.rs
rust/crates/imperium-crawl-flows/: Cargo.toml
rust/crates/imperium-crawl-flows/src/: flow_tools.rs  lib.rs  recorder.rs  runner.rs  schema.rs  storage.rs
rust/crates/imperium-crawl-knowledge/: Cargo.toml
rust/crates/imperium-crawl-knowledge/src/: engine.rs  lib.rs  predictor.rs
rust/crates/imperium-crawl-llm/: Cargo.toml
rust/crates/imperium-crawl-llm/src/: anthropic.rs  client.rs  extractor.rs  lib.rs  minimax.rs  openai.rs  retry.rs
rust/crates/imperium-crawl-llm/tests/: realworld.rs
rust/crates/imperium-crawl-sessions/: Cargo.toml
rust/crates/imperium-crawl-sessions/src/: jar.rs  lib.rs  manager.rs  vault.rs
rust/crates/imperium-crawl-stealth/: Cargo.toml
rust/crates/imperium-crawl-stealth/src/: detector.rs  escalation.rs  headers.rs  lib.rs  proxy.rs  tls.rs
rust/crates/imperium-crawl-stealth/tests/: integration.rs  stress.rs
rust/crates/imperium-crawl-tools/: Cargo.toml
rust/crates/imperium-crawl-tools/src/: ai.rs  api.rs  feeds.rs  interaction.rs  lib.rs  monitoring.rs  pdf.rs  search.rs  skills.rs  social.rs
rust/crates/imperium-crawl-tools/src/html/: crawl.rs  extract.rs  fetcher.rs  map.rs  markdown.rs  mod.rs  readability_tool.rs  scrape.rs  stealth_fetcher.rs  structured.rs
rust/crates/imperium-crawl-tools/tests/: heavy_stress.rs  realworld.rs
rust/docs/: AGENT-BRIEF.md  MORNING-REVIEW-CHECKLIST.md  RUST-PORT-MAPPING.md  SPRINT-CONTRACT.md  STARTUP-PROMPT.md
scripts/job-scraper/: careers-finder.ts  config.ts  csv-export.ts  domain-memory.ts  excel-reader.ts  index.ts  job-extractor.ts  output.ts  state.ts  types.ts
src/: cli-config.ts  cli-explore.ts  cli-onboarding.ts  cli-recorder.ts  cli-tui.ts  cli.ts  config.ts  constants.ts  formatters.ts  index.ts  server.ts  types.ts
src/batch/: index.ts  job-store.ts  types.ts
src/brave-api/: index.ts
src/captcha/: detector.ts  index.ts  solver.ts
src/cli/: config.ts  engine.ts  explore.ts  onboarding.ts  recorder.ts  tui.ts  ui.ts
src/core/: action-executor.ts  constants.ts  formatters.ts
src/engines/: camofox.ts  index.ts  types.ts
src/flows/: engine.ts  index.ts  server.ts  smart-target.ts  storage.ts  templates.ts  types.ts
src/knowledge/: index.ts  predictor.ts  record-browser.ts  store.ts
src/llm/: extractor.ts  index.ts  retry.ts
src/network/: index.ts  interceptor.ts  types.ts
src/protocols/: http.ts  index.ts
src/recipes/: crypto-websocket.json  ecommerce-product.json  hn-top-stories.json  index.ts  influencer-niche-discovery.json  job-listings-greenhouse.json  news-article-reader.json  reddit-posts.json  seo-page-audit.json  social-media-mentions.json
src/security/: action-policy.ts  auth-vault.ts  domain-filter.ts  index.ts  types.ts
src/sessions/: browser-connect.ts  browser-state.ts  encryption.ts  index.ts  inject-cookies.ts  manager.ts  types.ts
src/skills/: chain.ts  conditions.ts  detector.ts  index.ts  manager.ts  parameters.ts
src/snapshot/: annotator.ts  boundary.ts  differ.ts  extractor.ts  index.ts  store.ts  types.ts
src/social/: ai-fallback.ts  index.ts  parsers.ts  types.ts  whisper.ts
src/stealth/: antibot-detector.ts  browser-image-extract.ts  browser-pool.ts  browser.ts  chrome-profile.ts  detector.ts  headers.ts  index.ts  proxy.ts  tls.ts
src/tools/: action-executor.ts  ai-extract.ts  batch-download.ts  batch-scrape.ts  browser.ts  camofox-status.ts  camofox-update.ts  crawl.ts  create-skill.ts  delete-job.ts  discover-apis.ts  download.ts  extract.ts  image-search.ts  index.ts  inspect-flow.ts  instagram.ts  interact.ts  job-status.ts  knowledge.ts  list-flows.ts  list-jobs.ts  list-skills.ts  (+23 more)
tests/: ai-extract.test.ts  batch-scrape.test.ts  browser-pool.test.ts  captcha-detector.test.ts  captcha-solver.test.ts  chrome-profile.test.ts  circuit-breaker.test.ts  conditions.test.ts  config.test.ts  download.test.ts  fetcher.test.ts  flows.test.ts  input-validation.test.ts  instagram.test.ts  integration-phase0-2.test.ts  integration-tools.test.ts  interact.test.ts  knowledge.test.ts  markdown.test.ts  monitor.test.ts  pdf-extract.test.ts  proxy.test.ts  record-browser.test.ts  recorder.test.ts  reddit.test.ts  robots.test.ts  rss.test.ts  security.test.ts  skill-parameters.test.ts  skill-security.test.ts  snapshot.test.ts  social-parsers.test.ts  stealth-detector.test.ts  structured-data.test.ts  tool-registry.test.ts  url.test.ts  visual-builder.test.ts  watch.test.ts  youtube.test.ts
(+99 files in other folders)
