[package]
name = "imperium-crawl-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "L3 stealth: headless browser via chromiumoxide for imperium-crawl"

[dependencies]
imperium-crawl-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
url = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["browser"]
browser = ["dep:chromiumoxide"]
camofox = []
