[package]
name = "imperium-crawl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for imperium-crawl (Rust port)"
default-run = "imperium-crawl"

[[bin]]
name = "imperium-crawl"
path = "src/main.rs"

[dependencies]
imperium-crawl-core = { workspace = true }
imperium-crawl-stealth = { workspace = true }
imperium-crawl-browser = { workspace = true }
imperium-crawl-sessions = { workspace = true }
imperium-crawl-llm = { workspace = true }
imperium-crawl-tools = { workspace = true }
imperium-crawl-knowledge = { workspace = true }
imperium-crawl-flows = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
inquire = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
comfy-table = { workspace = true }
dotenvy = { workspace = true }
