[package]
name = "imperium-crawl-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, errors, and configuration for imperium-crawl"

[dependencies]
tokio = { workspace = true, features = ["fs", "rt", "sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dirs = "5"
schemars = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
