[package]
name = "imperium-crawl-knowledge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adaptive learning engine for per-domain stealth level prediction"

[dependencies]
imperium-crawl-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
