[package]
name = "imperium-crawl-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider abstraction (Anthropic, OpenAI, MiniMax) for imperium-crawl"

[dependencies]
imperium-crawl-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
# async-openai = { workspace = true, optional = true } — using plain reqwest for parity with TS

thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[features]
default = ["anthropic", "openai"]
anthropic = []
openai = []
minimax = []

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
