[package]
name = "imperium-crawl-sessions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cookie vault + AES-GCM session encryption for imperium-crawl"

[dependencies]
imperium-crawl-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
