[package]
name = "imperium-crawl-stealth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "L1 (headers) + L2 (TLS) stealth fetch engine for imperium-crawl"

[dependencies]
imperium-crawl-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
futures = { workspace = true }
