[package]
name = "imperium-crawl-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "All 43 tool implementations for imperium-crawl"

[dependencies]
imperium-crawl-core = { workspace = true }
imperium-crawl-stealth = { workspace = true }
imperium-crawl-browser = { workspace = true }
imperium-crawl-sessions = { workspace = true }
imperium-crawl-llm = { workspace = true }
imperium-crawl-knowledge = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }

# HTML / content
scraper = { workspace = true }
html5ever = { workspace = true }
readability = { workspace = true }
html2md = { workspace = true }

# PDF
pdfium-render = { workspace = true, optional = true }

# Feeds
rss = { workspace = true }
atom_syndication = { workspace = true }

# Util
url = { workspace = true }
robotxt = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["html", "search", "feeds", "interaction"]
html = []
search = []
feeds = []
interaction = []
pdf = ["dep:pdfium-render"]
youtube = []   # shell-out to yt-dlp at runtime, no Rust dep
ai = []
camofox = []   # shell-out to camofox binary

[dev-dependencies]
wiremock = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
